# codeAlt

./: .gitignore  README.md
advanced-agent/: create_dir.sh  main.py  pyproject.toml  test_ollama_connection.py  test_openrouter.py
advanced-agent/llm_models/: config.py  config_examples.py  env_example.txt  example_usage.py  llm_factory.py  model.py
advanced-agent/src/: firecrawl.py  logger_config.py  models.py  test_firecrawl.py  workflow.py
simple-agent/: main.py  pyproject.toml
